test: rename validation test method and update list initialization to use List.of